content/core/1.5.0/reference/vendr-core-models/productvariantcollection.md
---
title: ProductVariantCollection
description: API reference for ProductVariantCollection in Vendr, the eCommerce solution for Umbraco v8+
---
## ProductVariantCollection

```csharp
public class ProductVariantCollection : ReadOnlyCollection<ProductVariantItem>
```

**Namespace**
* [Vendr.Core.Models](../)

### Constructors

#### ProductVariantCollection

Initializes a new instance of the [`ProductVariantCollection`](../productvariantcollection/) class.

```csharp
public ProductVariantCollection(IList<ProductVariantItem> list)
```

**Parameters**

| Parameter | Description |
| --- | --- |
| list | The list to wrap. |


### Properties

#### Empty

Gets the empty [`ProductVariantCollection`](../productvariantcollection/).

```csharp
public static ProductVariantCollection Empty { get; }
```

**Value**

The empty [`ProductVariantCollection`](../productvariantcollection/).


### Indexers

#### ProductVariantCollection (1 of 2)

Gets the [`ProductVariantItem`](../productvariantitem/) with the specified content key.

```csharp
public ProductVariantItem this[Guid contentKey] { get; }
```

**Parameters**

| Parameter | Description |
| --- | --- |
| contentKey | The content key. |

**Returns**

The [`ProductVariantItem`](../productvariantitem/) with the specified content key.

**Value**

The [`ProductVariantItem`](../productvariantitem/).

---

#### ProductVariantCollection (2 of 2)

Gets the [`ProductVariantItem`](../productvariantitem/) with the specified content UDI.

```csharp
public ProductVariantItem this[Udi contentUdi] { get; }
```

**Parameters**

| Parameter | Description |
| --- | --- |
| contentUdi | The content UDI. |

**Returns**

The [`ProductVariantItem`](../productvariantitem/) with the specified content UDI.

**Value**

The [`ProductVariantItem`](../productvariantitem/).


<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Core.dll -->
