content/core/1.6.0/reference/vendr-core-models/productvariantcollection.md
---
title: ProductVariantCollection
description: API reference for ProductVariantCollection in Vendr, the eCommerce solution for Umbraco v8+
---
## ProductVariantCollection

```csharp
public class ProductVariantCollection : ReadOnlyCollection<ProductVariantItem>
```

**Namespace**
* [Vendr.Core.Models](../)

### Constructors

#### ProductVariantCollection

Initializes a new instance of the [`ProductVariantCollection`](../productvariantcollection/) class.

```csharp
public ProductVariantCollection(Guid storeId, IList<ProductVariantItem> list)
```

**Parameters**

| Parameter | Description |
| --- | --- |
| storeId | The StoreId the product variants belogn to |
| list | The list to wrap. |


### Properties

#### StoreId

Gets the StoreId the product variants belong to

```csharp
public Guid StoreId { get; }
```


### Indexers

#### ProductVariantCollection (1 of 2)

Gets the [`ProductVariantItem`](../productvariantitem/) with the specified content key.

```csharp
public ProductVariantItem this[Guid contentKey] { get; }
```

**Parameters**

| Parameter | Description |
| --- | --- |
| contentKey | The content key. |

**Returns**

The [`ProductVariantItem`](../productvariantitem/) with the specified content key.

**Value**

The [`ProductVariantItem`](../productvariantitem/).

---

#### ProductVariantCollection (2 of 2)

Gets the [`ProductVariantItem`](../productvariantitem/) with the specified content UDI.

```csharp
public ProductVariantItem this[Udi contentUdi] { get; }
```

**Parameters**

| Parameter | Description |
| --- | --- |
| contentUdi | The content UDI. |

**Returns**

The [`ProductVariantItem`](../productvariantitem/) with the specified content UDI.

**Value**

The [`ProductVariantItem`](../productvariantitem/).


### Methods

#### Empty

Gets an empty [`ProductVariantCollection`](../productvariantcollection/).

```csharp
public static ProductVariantCollection Empty(Guid storeId)
```

**Value**

The empty [`ProductVariantCollection`](../productvariantcollection/).


<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Core.dll -->
